# TicTacToe-on-Casper

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json  server.js
.github/workflows/: build.yml
contract/: Cargo.toml  Makefile
contract/contract/: Cargo.toml
contract/contract/src/: highscore.rs
contract/keys/: public_key.pem  public_key_hex  secret_key.pem
contract/tests/: Cargo.toml
contract/tests/src/: lib.rs
env/: pyvenv.cfg
keys/: pubkey.txt  secret_key.pem
public/: index.html
public/static/: contract-interaction.js  index.css  index.js
